// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <div
    className="Panel__PanelWrapper-sc-48epke-0 cFaOzN"
    id={null}
  >
    <section
      className="Panel__SectionWrapper-sc-48epke-1 hvwnOO"
      id={null}
    />
  </div>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <div
    className="Panel__PanelWrapper-sc-48epke-0 cFaOzN"
    id={null}
  >
    <section
      className="Panel__SectionWrapper-sc-48epke-1 hvwnOO Panel__PanelSection-sc-48epke-2 dGRqRM"
      id={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 iHWhme"
            fontSize="0.879em"
            fontWeight={400}
            id={null}
            letterSpacing="0.2px"
          >
            Header
          </p>
        </div>
      </div>
    </section>
    <section
      className="Panel__SectionWrapper-sc-48epke-1 hvwnOO"
      id={null}
    />
  </div>
</div>
`;

exports[` 3`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <div
    className="Panel__PanelWrapper-sc-48epke-0 cFaOzN"
    id={null}
  >
    <section
      className="Panel__SectionWrapper-sc-48epke-1 hvwnOO"
      id={null}
    />
    <section
      className="Panel__SectionWrapper-sc-48epke-1 hvwnOO Panel__PanelSection-sc-48epke-2 dGRqRM"
      id={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 iHWhme"
            fontSize="0.879em"
            fontWeight={400}
            id={null}
            letterSpacing="0.2px"
          >
            Footer
          </p>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[` 4`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <div
    className="Panel__PanelWrapper-sc-48epke-0 cFaOzN"
    id={null}
  >
    <section
      className="Panel__SectionWrapper-sc-48epke-1 hvwnOO Panel__PanelSection-sc-48epke-2 dGRqRM"
      id={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 iHWhme"
            fontSize="0.879em"
            fontWeight={400}
            id={null}
            letterSpacing="0.2px"
          >
            Header
          </p>
        </div>
      </div>
    </section>
    <section
      className="Panel__SectionWrapper-sc-48epke-1 hvwnOO"
      id={null}
    />
    <section
      className="Panel__SectionWrapper-sc-48epke-1 hvwnOO Panel__PanelSection-sc-48epke-2 dGRqRM"
      id={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 iHWhme"
            fontSize="0.879em"
            fontWeight={400}
            id={null}
            letterSpacing="0.2px"
          >
            Footer
          </p>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[` 5`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <div
    className="Panel__PanelWrapper-sc-48epke-0 cFaOzN"
    id="Panel"
  >
    <section
      className="Panel__SectionWrapper-sc-48epke-1 hvwnOO Panel__PanelSection-sc-48epke-2 dGRqRM"
      id="Panel_header"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 iHWhme"
            fontSize="0.879em"
            fontWeight={400}
            id={null}
            letterSpacing="0.2px"
          >
            Header
          </p>
        </div>
      </div>
    </section>
    <section
      className="Panel__SectionWrapper-sc-48epke-1 hvwnOO"
      id="Panel_body"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jwlPXp Card__CardGridWrapper-sc-1g3s676-4 cmdDQj"
        id={null}
        rows={null}
      >
        <div
          className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
          href={null}
          id="storyshots_59"
          media=""
          onClick={null}
        />
        <div
          className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
          href={null}
          id="storyshots_60"
          media=""
          onClick={null}
        />
        <div
          className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
          href={null}
          id="storyshots_61"
          media=""
          onClick={null}
        />
        <div
          className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
          href={null}
          id="storyshots_62"
          media=""
          onClick={null}
        />
        <div
          className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
          href={null}
          id="storyshots_63"
          media=""
          onClick={null}
        />
        <div
          className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
          href={null}
          id="storyshots_64"
          media=""
          onClick={null}
        />
        <div
          className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
          href={null}
          id="storyshots_65"
          media=""
          onClick={null}
        />
      </section>
    </section>
    <section
      className="Panel__SectionWrapper-sc-48epke-1 hvwnOO Panel__PanelSection-sc-48epke-2 dGRqRM"
      id="Panel_footer"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 iHWhme"
            fontSize="0.879em"
            fontWeight={400}
            id={null}
            letterSpacing="0.2px"
          >
            Footer
          </p>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[` 6`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100%",
    }
  }
>
  <div
    className="Panel__PanelWrapper-sc-48epke-0 cFaOzN"
    id="Panel"
  >
    <section
      className="Panel__SectionWrapper-sc-48epke-1 hvwnOO Panel__PanelSection-sc-48epke-2 dGRqRM"
      id="Panel_header"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 iHWhme"
            fontSize="0.879em"
            fontWeight={400}
            id={null}
            letterSpacing="0.2px"
          >
            Header
          </p>
        </div>
      </div>
    </section>
    <section
      className="Panel__SectionWrapper-sc-48epke-1 hvwnOO"
      id="Panel_body"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jwlPXp Card__CardGridWrapper-sc-1g3s676-4 cmdDQj"
        id={null}
        rows={null}
      >
        <div
          className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
          href={null}
          id="storyshots_184"
          media=""
          onClick={null}
        />
        <div
          className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
          href={null}
          id="storyshots_185"
          media=""
          onClick={null}
        />
        <div
          className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
          href={null}
          id="storyshots_186"
          media=""
          onClick={null}
        />
        <div
          className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
          href={null}
          id="storyshots_187"
          media=""
          onClick={null}
        />
        <div
          className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
          href={null}
          id="storyshots_188"
          media=""
          onClick={null}
        />
        <div
          className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
          href={null}
          id="storyshots_189"
          media=""
          onClick={null}
        />
        <div
          className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
          href={null}
          id="storyshots_190"
          media=""
          onClick={null}
        />
      </section>
    </section>
    <section
      className="Panel__SectionWrapper-sc-48epke-1 hvwnOO Panel__PanelSection-sc-48epke-2 dGRqRM"
      id="Panel_footer"
    >
      <div
        className="Bar__BarLayout-icfo76-2 eIFIfS"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 dLaZFL"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 iHWhme"
            fontSize="0.879em"
            fontWeight={400}
            id={null}
            letterSpacing="0.2px"
          >
            Footer
          </p>
        </div>
      </div>
    </section>
  </div>
</div>
`;
